<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/iEnlazar"
        android:title="@string/sEnlazar"
        android:orderInCategory="0"
        app:showAsAction="never"/>

    <item
        android:id="@+id/iDisconnect"
        android:title="@string/sDisconnect"
        android:orderInCategory="1"
        app:showAsAction="never"/>

    <item
        android:id="@+id/iHelp"
        android:title="@string/sHelp"
        android:orderInCategory="99"
        app:showAsAction="never"/>

    <item
        android:id="@+id/iAbout"
        android:title="@string/sAbout"
        android:orderInCategory="100"
        app:showAsAction="never"/>



</menu>
