<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisgoyes.ejemplobluetooth.enlazarbt"
    android:orientation="vertical">

    <TextView
        android:text="@string/sDisponibles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/primary_dark_material_dark"
        android:textStyle="italic"
        android:textSize="40dp"
        />

    <ListView
        android:padding="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@id/android:list">
    </ListView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <Button
            android:id="@+id/botonEnlazar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sEnlazarPiccolo"
            android:textSize="30dp"/>
        <Button
            android:id="@+id/botonCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sCancelar"
            android:textSize="30dp"/>
    </LinearLayout>

</LinearLayout>
